Ajout du z-index pour placer la cible derrière

--- a/une-page-web-comme-interface-mobile/partie4/version-initiale/www/styles.css
+++ b/une-page-web-comme-interface-mobile/partie4/version-initiale/www/styles.css
@@ -12,17 +12,15 @@
 
 }
 
-:root {
-
-  /* Désactivation du zoom sur mobile */
-  touch-action: pan-x pan-y;
-  height: 100% 
-
+/* Réactivation des clics sur les éléments qu'on souhaite cliquables */
+#bouton1, #bouton2, body, select {
+  pointer-events: all;
 }
 
-#bouton1, #bouton2, body {
-  /* Réactivation des clics sur les éléments qu'on souhaite cliquables */
-  pointer-events: all;
+/* Désactivation du zoom sur les appareils mobiles */
+:root {
+  touch-action: pan-x pan-y;
+  height: 100% 
 }
 
 html {
@@ -58,6 +56,7 @@ section {
   width: 50px;
   height: 50px;
   opacity: 0.6;
+  z-index: -1;
 }
 
 input {
@@ -77,4 +76,12 @@ button {
 label {
   display: block;
   margin: 1em auto 0.5em auto;
+}
+
+select {
+  display: block;
+  margin: 0 auto;
+  width: 80%;
+  max-width: 300px;
+  font-size: 1em;
 }
